# unimrcp-plugin-xfyun_asr

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md
script/cmake/: FindAPR.cmake  FindSofia.cmake  gcc_version.cmake  version_string.cmake
src/: default_conf.h  xfyun_asr.c  xfyun_asr.h  xfyun_asr_logging.h  xfyun_default_conf.h
